added changed code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(eosquickstart VERSION 0.1 LANGUAGES CXX)
+project(parchquickstart VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -12,20 +12,20 @@ find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)
 
 configure_file(config.h.in config.h @ONLY)
 
-qt_add_executable(eos-quickstart
+qt_add_executable(parch-quickstart
     main.cpp packagemodel.h packagemodel.cpp packagemanager.h packagemanager.cpp
 )
 
-qt_add_qml_module(eos-quickstart
-    URI eosquickstart
+qt_add_qml_module(parch-quickstart
+    URI parchquickstart
     VERSION 1.0
     QML_FILES main.qml 
 )
 
-install(FILES eos-quickstart.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/)
-install(TARGETS eos-quickstart RUNTIME DESTINATION bin)
+install(FILES parch-quickstart.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/)
+install(TARGETS parch-quickstart RUNTIME DESTINATION bin)
 
-target_compile_definitions(eos-quickstart
+target_compile_definitions(parch-quickstart
     PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(eos-quickstart
+target_link_libraries(parch-quickstart
     PRIVATE Qt6::Quick)
