added some applications to begin with

--- a/parch-quickstart.conf
+++ b/parch-quickstart.conf
@@ -6,10 +6,9 @@ PackageManager="/usr/bin/pacman"
 [Browsers]
 firefox="Extensible browser from Mozilla based on Gecko with fast rendering"
 vivaldi="An advanced browser made with the power user in mind"
-torbrowser-launcher="Securely and easily download, verify, install, and launch Tor Browser"
 chromium="Web browser developed by Google, the open source project behind Google Chrome"
 falkon="Web browser based on QtWebEngine, written in Qt framework"
-konqueror="Web browser based on Qt toolkit and Qt WebEngine"
+anglefish="Web browser based on Qt toolkit and Qt WebEngine"
 
 [Image Viewers & Managers]
 eog="Image viewing and cataloging program from the GNOME project"
@@ -19,7 +18,6 @@ ristretto="Fast and lightweight image viewer from the Xfce project"
 gthumb="Image viewer and browser from the GNOME project"
 digikam="An advanced digital photo management application from the KDE project"
 gnome-photos="A tool to access, organize, and share your photos from the GNOME project"
-rapid-photo-downloader="Download photos and videos from cameras, memory cards and portable storage devices"
 shotwell="A digital photo organizer designed for the GNOME desktop environment"
 
 [Image Processing & Editing]
@@ -41,11 +39,12 @@ transmission-gtk="Simple and easy-to-use BitTorrent client, GTK version"
 
 [Communications]
 telegram-desktop="Official Telegram Desktop client"
-telepathy-kde-meta="Instant messaging client using the Telepathy framework"
 pidgin="Multi-protocol instant messaging client with audio support"
 hexchat="A popular and easy to use graphical IRC (chat) client"
 konversation="Qt-based IRC client by the KDE project"
 polari="Simple IRC client by the GNOME project"
+neochat="Kde Matrix client"
+fractal="Gnome Matrix client"
 
 [Email]
 evolution="Mature and feature-rich e-mail client that is part of the GNOME project"
@@ -58,7 +57,6 @@ kube="Modern communication and collaboration client built with QtQuick"
 [Audio Players]
 lollypop="A modern music player from the GNOME project"
 rhythmbox="Music playback and management application"
-strawberry="A music player aimed at audio enthusiasts and music collectors"
 elisa="Simple and elegant music player from the KDE project"
 audacious="Lightweight, advanced audio player focused on audio quality"
 
@@ -84,7 +82,6 @@ pycharm-community-edition="Python IDE with support for code analysis, debugging 
 featherpad="Minimal plain text editor with support for tabs, printing and syntax highlighting"
 gedit="GTK editor with many features from the GNOME project"
 kate="Advanced, fully-featured text editor from the KDE project"
-l3afpad="Simple plain text editor for GTK+ 3"
 pluma="Powerful text editor from the MATE project"
 mousepad="A fast and simple text editor from the Xfce project"
 xed="A small and lightweight text editor from the X-Apps Project"
